--- a/views/bookmarks/add.erb
+++ b/views/bookmarks/add.erb
@@ -1,4 +1,5 @@
 <form action='/bookmarks' method='post'>
   <input type='text' id='new_url' name='new_url'>
+  <input type='text' id='title' name='title'>
   <input type='submit' value='Submit'>
 </form>
