--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,7 +1,11 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><a href='<%= bookmark['url'] %>'><%= bookmark['title'] %></a></li>
+    <li>
+      <a href='<%= bookmark['url'] %>' target='_blank'>
+        <%= bookmark['title'] %>
+      </a>
+    </li>
   <% end %>
 </ul>
 
-<button><a href='/add'>Add bookmark</a></button>
+<button><a href='/bookmarks/add'>Add bookmark</a></button>
