--- a/views/bookmarks/add.erb
+++ b/views/bookmarks/add.erb
@@ -1,5 +1,5 @@
 <form action='/bookmarks' method='post'>
-  <input type='text' id='new_url' name='new_url' paceholder='URL'>
-  <input type='text' id='title' name='title' paceholder='Title'>
+  <input type='text' id='new_url' name='new_url' placeholder='URL'>
+  <input type='text' id='title' name='title' placeholder='Title'>
   <input type='submit' value='Submit'>
 </form>
