--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,8 +1,8 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
     <li>
-      <a href='<%= bookmark['url'] %>' target='_blank'>
-        <%= bookmark['title'] %>
+      <a href='<%= bookmark.url %>' target='_blank'>
+        <%= bookmark.title %>
       </a>
     </li>
   <% end %>
