--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,7 +1,7 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
     <li class='bookmark' id='bookmark-<%= bookmark.id %>' >
-      <a href='<%= bookmark.url %>' target='_blank'>
+      <a href="<%= bookmark.url %>" target='_blank'>
         <%= bookmark.title %>
       </a>
 
