--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -14,6 +14,16 @@
         <input type='submit' value='Edit'/>
       </form>
 
+      <form action='/bookmarks/<%= bookmark.id%>/comments/new' method='get' >
+        <input type='submit' value='Add Comment' />
+      </form>
+
+      <ul>
+        <% bookmark.comments.each do |comment| %>
+          <li><%= comment['text'] %></li>
+        <% end %>
+      </ul>
+
     </li>
   <% end %>
 </ul>
